--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ NGINX_HOST=localhost
 # PHP
 
 # See https://hub.docker.com/r/nanoninja/php-fpm/tags/
-PHP_VERSION=latest
+PHP_VERSION=7.3.6-fpm
 
 # MySQL
-MYSQL_VERSION=5.7.22
+MYSQL_VERSION=latest
 MYSQL_HOST=mysql
 MYSQL_DATABASE=test
 MYSQL_ROOT_USER=root
