--- a/web/app/composer.json.dist
+++ b/web/app/composer.json.dist
@@ -11,12 +11,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\Acme\\": "src/"
+            "Wedev\\WeDev\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "AppTest\\Acme\\": "test/"
+            "WeDevTest\\WeDev\\": "test/"
         }
     },
     "minimum-stability": "stable",
