--- a/web/public/package.json.dist
+++ b/web/public/package.json.dist
@@ -27,6 +27,10 @@
   },
   "devDependencies": {
     "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-vue": "^5.2.3"
   }
 }
