--- a/web/public/package.json.dist
+++ b/web/public/package.json.dist
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "jest": "jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,16 @@
     "webpack-dev-server": "^3.8.0",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-vue": "^5.2.3"
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^7.14.3",
+    "eslint-plugin-vue": "^5.2.3",
+    "jest": "^24.9.0"
+  },
+  "jest": {
+    "testMatch": [
+      "**/test/*.js?(x)"
+    ]
   }
 }
