--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   -   repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v2.2.3
+      rev: v2.3.0
       hooks:
         - id: check-yaml
           files: \.(yaml|yml)$
@@ -55,4 +55,4 @@ repos:
           description: Run code to fix js files
           entry: pre_commit_hooks/eslint-fix.sh
           language: script
-          files: \.jsx\?$
+          files: \.jsx?$
