--- a/web/public/package.json.dist
+++ b/web/public/package.json.dist
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "jest": "jest --verbose"
+    "webpack-dev": "webpack --mode=development"
   },
   "keywords": [],
   "author": "",
