--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,11 @@ indent_style = space
 indent_size = 4
 max_line_length=160
 
+[*.js]
+indent_style = space
+indent_size = 4
+max_line_length=160
+
 
 [composer.*]
 indent_size = 4
