--- a/web/public/package.json.dist
+++ b/web/public/package.json.dist
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "jest": "jest --verbose"
+    "jest": "jest --verbose",
     "webpack-dev": "webpack --mode=development"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "webpack": "^4.39.2"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
     "eslint": "^6.3.0",
