--- a/web/public/.eslintrc.js.dist
+++ b/web/public/.eslintrc.js.dist
@@ -4,6 +4,8 @@ module.exports = {
         "es6": true
     },
     "extends": [
+        'eslint:recommended',
+        'prettier',
         "plugin:vue/essential",
         "airbnb-base"
     ],
