--- a/web/public/.eslintrc.js.dist
+++ b/web/public/.eslintrc.js.dist
@@ -1,25 +1,25 @@
 module.exports = {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": [
-        'eslint:recommended',
-        'prettier',
-        "plugin:vue/essential",
-        "airbnb-base"
-    ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "vue"
-    ],
-    "rules": {
-    }
+  env: {
+    browser: true,
+    es6: true,
+    node: true,
+    jasmine: true,
+    jest: true
+  },
+  extends: [
+    "eslint:recommended",
+    "prettier",
+    "plugin:vue/essential",
+    "airbnb-base"
+  ],
+  globals: {
+    Atomics: "readonly",
+    SharedArrayBuffer: "readonly"
+  },
+  parserOptions: {
+    ecmaVersion: 2018,
+    sourceType: "module"
+  },
+  plugins: ["vue"],
+  rules: {}
 };
