--- a/web/public/package.json.dist
+++ b/web/public/package.json.dist
@@ -34,18 +34,18 @@
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
     "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.2.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "lint-staged": "^9.2.5",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-vue": "^5.2.3",
+    "husky": "^3.0.5",
     "jest": "^24.9.0",
-    "prettier": "^1.18.2",
+    "lint-staged": "^9.2.5",
+    "prettier": "1.18.2",
     "pretty-quick": "^1.11.1",
-    "husky": "^3.0.5"
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "jest": {
     "testMatch": [
