--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
             - NODE_ENV=${NODE_ENVIROMENT}
         ports:
             - "4040:5000"
-        command: /bin/sh -c "npm install -y && npm start"
+        command: /bin/sh -c "npm install -y && npm run webpack-dev && npm start"
         volumes:
             - "./web/public:/var/www/html/public"
             - "./web/public/node_modules:/var/www/html/public/node_modules"
