--- a/web/public/webpack.config.js.dist
+++ b/web/public/webpack.config.js.dist
@@ -8,6 +8,7 @@ const MiniCssExtractPlugin = require('mini-css-extract-plugin');
 
 // Main webpack module to export
 module.exports = {
+    resolve: {extensions: ['.js','.jsx']}
     entry: "./src/app.js",
     output: {
         path: __dirname + '/build',
