--- a/web/public/package.json.dist
+++ b/web/public/package.json.dist
@@ -30,6 +30,7 @@
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "uuid": "^3.3.3",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack": "^4.39.2"
   },
   "devDependencies": {
@@ -44,8 +45,7 @@
     "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
     "pretty-quick": "^1.11.1",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-cli": "^3.3.7"
   },
   "jest": {
     "testMatch": [
