--- a/web/public/package.json.dist
+++ b/web/public/package.json.dist
@@ -45,6 +45,7 @@
     "lint-staged": "^9.2.5",
     "prettier": "1.18.2",
     "pretty-quick": "^1.11.1",
+    "webpack-dev-server": "^3.8.0",
     "webpack-cli": "^3.3.7"
   },
   "jest": {
